--- a/mystyle.css
+++ b/mystyle.css
@@ -262,3 +262,64 @@ body {
 .border {
   border-bottom: 2px solid #dfe1e6;
 }
+
+.contact-form {
+  background-color: #6070ff;
+  width: 100%;
+  height: 820px;
+  border-top-left-radius: 100px;
+}
+
+.background {
+  background-image: url(./images/formbackground.png);
+  background-repeat: no-repeat;
+  background-size: 50%;
+  background-position: right;
+  height: 650px;
+  display: flex;
+  flex-direction: column;
+}
+
+.contact {
+  color: #fff;
+  width: auto;
+  height: 56px;
+  font-size: 40px;
+  font-weight: 700;
+  margin-top: 100px;
+  align-self: center;
+}
+
+.contact-about {
+  width: 327px;
+  height: 137px;
+  flex-shrink: 0;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 400;
+  align-self: center;
+  color: #ebebff;
+  margin-top: 0;
+  margin-bottom: 40px;
+}
+
+.get-in-touch {
+  background-color: #fff;
+  font-size: 17px;
+  font-weight: 500;
+  text-align: center;
+  width: 128px;
+  padding: 12px 16px;
+  border-radius: 8px;
+  color: #6070ff;
+  margin-left: 22px;
+}
+
+.footer {
+  width: 134px;
+  height: 5px;
+  flex-shrink: 0;
+  border-radius: 10px;
+  background: #0d151e;
+  align-self: center;
+}
