--- a/mystyle.css
+++ b/mystyle.css
@@ -303,23 +303,50 @@ body {
   margin-bottom: 40px;
 }
 
-.get-in-touch {
+.send-button {
   background-color: #fff;
   font-size: 17px;
   font-weight: 500;
   text-align: center;
-  width: 128px;
+  width: 138px;
   padding: 12px 16px;
   border-radius: 8px;
   color: #6070ff;
   margin-left: 22px;
+  margin-top: 10px;
 }
 
-.footer {
-  width: 134px;
-  height: 5px;
+.form-message {
+  width: 327px;
+  height: 170px;
   flex-shrink: 0;
-  border-radius: 10px;
-  background: #0d151e;
   align-self: center;
+  border-radius: 8px;
+  padding-top: 10px;
+  padding-left: 10px;
+  font-size: 15px;
+  font-weight: 400;
+  resize: none;
+}
+
+.form-email {
+  width: 327px;
+  height: 38px;
+  flex-shrink: 0;
+  border-radius: 8px;
+  align-self: center;
+  margin-bottom: 20px;
+  padding-top: 20px;
+  padding-left: 10px;
+  font-size: 17px;
+  font-weight: 400;
+  resize: none;
+  text-align: justify;
+}
+
+.form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 50px;
 }
