--- a/mystyle.css
+++ b/mystyle.css
@@ -1,63 +1,68 @@
-@import url(https://fonts.googleapis.com/css2?family=Poppins:wghp@400;700&display=swap);
-.headline{
-    background-image: url(./header-shapes\ mobile.png);
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 90vh;
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    font-family: 'Poppins',sans-serif;
-}
-.header{
-    display: flex;
-width: 375px;
-height: 48px;
-padding: 4px 24px 4px 12px;
-align-items: flex-start;
-justify-content: space-between;
-align-content: center;
-}
-.intro{
-    width: 300px;
-    margin-top: 100px;
-    margin-left: 25px; 
-    font-size: 40px;
-    margin-bottom: 0;
-    font-weight: 700;
-}
-.para{
-    width: 300px;
-    height: 150px;
-    margin-left: 25px; 
-    text-align: left;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    margin-top: 0;
-}
-.logo{
-    color: #6070FF;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 18px;
-    margin-top: 5px;
-    text-align: center;
-    padding-right:100px ;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
+body {
+  font-family: 'Poppins', sans-serif;
 }
 
-.Connect{
-    width: 117px;
-    height: 24px;
-    font-size: 16px;
-    color: #7F8CFF;
-    margin-left:28px ;
+.container {
+  display: flex;
+  width: 100%;
+  height: 48px;
+  font-size: 18px;
+  box-sizing: border-box;
+  justify-content: space-between;
 }
 
-.about{
-width: 170.167px;
-height: 20px;
-margin-left: 25px;
+.logo {
+  font-size: 18px;
+  font-weight: 700;
+  color: #6070ff;
+  margin-left: 25px;
+  align-self: center;
+  height: 25px;
+  width: 76px;
 }
+
+.menu {
+  align-self: center;
+  height: 25px;
+  width: 25px;
+  margin-right: 35px;
+}
+
+.headline {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 70px 24px;
+  font-size: 16px;
+  gap: 12px;
+  color: #172b4d;
+  background-image: url(header-shapes\ mobile.png);
+  background-repeat: no-repeat;
+  box-sizing: border-box;
+  border-bottom-left-radius: 50px;
+}
+
+.social-media-icons {
+  width: 170.17px;
+  height: 20px;
+}
+
+.description {
+  color: #344563;
+  width: 327px;
+  height: auto;
+}
+
+.lets-connect {
+  position: relative;
+  line-height: 24px;
+  font-weight: 500;
+  color: #7f8cff;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 
 
