--- a/mystyle.css
+++ b/mystyle.css
@@ -159,7 +159,7 @@ body {
   background-color: #ebebff;
   font-weight: 500;
   border-radius: 8px;
-  font-size: 3.0vw;
+  font-size: 3vw;
   padding: 5px 10px;
   color: #6070ff;
 }
@@ -305,7 +305,7 @@ body {
   flex-direction: column;
   align-items: center;
   background-repeat: no-repeat;
-  background-size: 50% ;
+  background-size: 50%;
   background-position: right;
   height: auto;
   width: auto;
@@ -414,10 +414,11 @@ body {
 
   .project {
     font-size: 1.2vw;
-    border: solid #7F8CFF;
+    border: solid #7F8cff;
     height: 4.2vw;
     width: 25%;
   }
+
   .AboutCard {
     margin-left: 5%;
     margin-top: 0;
@@ -436,7 +437,7 @@ body {
     font-size: 1.4vw;
     height: auto;
     width: auto;
-  }
+}
 
   .lang-list {
     font-size: 1.3vw;
@@ -579,5 +580,5 @@ body {
     position: sticky;
     top: 0;
     z-index: 100;
-  }
+}
 }
