Errors of desktop section Removed

--- a/mystyle.css
+++ b/mystyle.css
@@ -414,7 +414,7 @@ body {
 
   .project {
     font-size: 1.2vw;
-    border: solid #7F8cff;
+    border: solid #7f8cff;
     height: 4.2vw;
     width: 25%;
   }
@@ -437,12 +437,12 @@ body {
     font-size: 1.4vw;
     height: auto;
     width: auto;
-}
+  }
 
   .lang-list {
     font-size: 1.3vw;
   }
-  
+
   .tech-item {
     font-size: 1.4vw;
     font-weight: 400;
@@ -580,5 +580,5 @@ body {
     position: sticky;
     top: 0;
     z-index: 100;
-}
+  }
 }
